Changes in version 0.2.0.1-alpha - 2007-??-??
  o Minor features (build):
    - Make autoconf search for libevent and openssl consistently.
    - Update deprecated macros in configure.in

Changes in version 0.1.2.10-rc - 2007-03-??
  o Major bugfixes (Windows):
    - Do not load the NT services library functions (which may not exist)
      just to detect if we're a service trying to shut down.

  o Minor bugfixes (other):
    - Clarify a couple of log messages.


Changes in version 0.1.2.9-rc - 2007-03-02
  o Major bugfixes (Windows):
    - On MinGW, use "%I64u" to printf/scanf 64-bit integers, instead
      of the usual GCC "%llu". This prevents a bug when saving 64-bit
      int configuration values: the high-order 32 bits would get
      truncated. In particular, we were being bitten by the default
      MaxAdvertisedBandwidth of 128 TB turning into 0. (Fixes bug 400
      and maybe also bug 397.)

  o Minor bugfixes (performance):
    - Use OpenSSL's AES implementation on platforms where it's faster.
      This could save us as much as 10% CPU usage.

  o Minor bugfixes (server):
    - Do not rotate onion key immediately after setting it for the first
      time.

  o Minor bugfixes (directory authorities):
    - Stop calling servers that have been hibernating for a long time
      "stable". Also, stop letting hibernating or obsolete servers affect
      uptime and bandwidth cutoffs.
    - Stop listing hibernating servers in the v1 directory.

  o Minor bugfixes (hidden services):
    - Upload hidden service descriptors slightly less often, to reduce
      load on authorities.

  o Minor bugfixes (other):
    - Fix an assert that could trigger if a controller quickly set then
      cleared EntryNodes.  (Bug found by Udo van den Heuvel.)
    - On architectures where sizeof(int)>4, still clamp declarable bandwidth
      to INT32_MAX.
    - Fix a potential race condition in the rpm installer.  Found by
      Stefan Nordhausen.