@@ -3,6 +3,10 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
     - Make autoconf search for libevent and openssl consistently.
     - Update deprecated macros in configure.in
 
+  o Minor features (logging):
+    - Always prepend "Bug: " to any log message about a bug.
+
+
 Changes in version 0.1.2.10-rc - 2007-03-??
   o Major bugfixes (Windows):
     - Do not load the NT services library functions (which may not exist)
